# frootai

./: CONTRIBUTING.md  NOTICE  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-solution-play.yml
.github/workflows/: consistency-check.yml  content-sync.yml  deploy-chatbot.yml  npm-publish.yml  pypi-publish.yml  validate-plays.yml  version-check.yml  vsce-publish.yml
.husky/: pre-commit
community-plugins/salesforce/: plugin.json
community-plugins/sap/: plugin.json
community-plugins/servicenow/: plugin.json
config/: froot-packages.json
docs/: F4-GitHub-Agentic-OS.md
foundry-agent/: agent.py  requirements.txt
foundry-agent/.foundry/: agent-metadata.yaml
functions/: openapi.json  package.json  server.js
functions/chat/: index.js
infra-registry/: README.md
marketplace/: azure-listing.json  github-listing.json
mcp-server/: README.md  agent-card.json  build-knowledge.js  cli.js  index.js  knowledge.json  package-lock.json  package.json
python-mcp/: README.md  pyproject.toml
python-mcp/frootai_mcp/: __init__.py  knowledge.json  server.py
python-sdk/: pyproject.toml
python-sdk/frootai/: __init__.py  a2a.py  ab_testing.py  cli.py  client.py  evaluation.py  foundry.py  plays.py  sso.py  telemetry.py
scripts/: CONTENT-SOURCE-MAP.md  sync-content.js
solution-plays/01-enterprise-rag/: README.md
solution-plays/02-ai-landing-zone/: README.md  agent.md
solution-plays/03-deterministic-agent/: README.md  agent.md
solution-plays/04-call-center-voice-ai/: README.md  agent.md  instructions.md
solution-plays/05-it-ticket-resolution/: README.md  agent.md  instructions.md
solution-plays/06-document-intelligence/: README.md  agent.md  instructions.md
solution-plays/07-multi-agent-service/: README.md  agent.md  instructions.md
solution-plays/08-copilot-studio-bot/: README.md  agent.md  instructions.md
solution-plays/09-ai-search-portal/: CHANGELOG.md  README.md  agent.md  instructions.md
solution-plays/10-content-moderation/: README.md  agent.md  instructions.md
solution-plays/11-ai-landing-zone-advanced/: agent.md
solution-plays/12-model-serving-aks/: agent.md
solution-plays/13-fine-tuning-workflow/: agent.md
solution-plays/14-cost-optimized-ai-gateway/: agent.md
solution-plays/15-multi-modal-docproc/: agent.md
solution-plays/16-copilot-teams-extension/: agent.md
solution-plays/17-ai-observability/: agent.md
solution-plays/18-prompt-management/: agent.md
vscode-extension/: LICENSE  README.md  frootai-0.1.0.vsix  package-lock.json  package.json
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website-v2/: next.config.ts  package-lock.json  package.json
website-v3/: vercel.json
workshops/: 01-build-rag-pipeline.md  README.md
(+208 files in other folders)
